--- a/src/app/demo/components/consultahistorica-ctaxcobrar/consultahistorica-ctaxcobrar.component.html
+++ b/src/app/demo/components/consultahistorica-ctaxcobrar/consultahistorica-ctaxcobrar.component.html
@@ -28,7 +28,7 @@
                     <th style="text-align: center;">Numero</th>
                     <th style="text-align: center;">Fecha</th>
                     <th style="text-align: center;">Imp.Fact</th>
-                    <th style="text-align: center;">Moneda</th>
+                    <th style="text-align: center; width: 50px;">Moneda</th>
                     <th style="text-align: center;">Fec.Pago</th>
                     <th style="text-align: center;">Pago S/.</th>
                     <th style="text-align: center;">Pago $</th>
