--- a/src/app/demo/components/cuenta-bancaria/cuenta-bancaria.component.html
+++ b/src/app/demo/components/cuenta-bancaria/cuenta-bancaria.component.html
@@ -38,7 +38,7 @@
 
             <!-- Cuerpo de Tabla -->
             <ng-template pTemplate="body" let-banco let-ri="rowIndex" let-editing="editing">
-                <tr [pEditableRow]="banco" [pContextMenuRow]="banco">
+                <tr [pEditableRow]="banco" >
                     <!-- Columna ID -->
                     <td style="text-align: left;">
                         <p-cellEditor>
