--- a/src/app/demo/components/consultadocpendiente-ctaxcobrar/consultadocpendiente-ctaxcobrar.component.html
+++ b/src/app/demo/components/consultadocpendiente-ctaxcobrar/consultadocpendiente-ctaxcobrar.component.html
@@ -18,7 +18,8 @@
     <br />
     <div class="card p-2">
         <p-table [value]="consultaDocPagoList" [scrollable]="true" [tableStyle]="{width: '100%', border: '0px solid black'}"
-            groupRowsBy="ruc" rowGroupMode="subheader" [loading]="load">
+            groupRowsBy="ruc" rowGroupMode="subheader" [loading]="load" selectionMode="multiple" 
+            [(selection)]="selectedOption">
             <ng-template pTemplate="header">
                 <tr>
                     <th>RUC</th>
@@ -93,7 +94,7 @@
             </ng-template>
 
             <ng-template pTemplate="body" let-doc>
-                <tr>
+                <tr >
                     <td style="text-align: left; white-space: nowrap;">{{ doc.ruc }}</td>
                     <td style="text-align: left; white-space: nowrap;">{{ doc.razonSocial }}</td>
                     <td style="text-align: left; white-space: nowrap;">{{ doc.tipoDocDesc }}</td>
